@@ -5,16 +5,18 @@ import com.tramchester.ComponentsBuilder;
 import com.tramchester.config.TramchesterConfig;
 import com.tramchester.domain.Journey;
 import com.tramchester.domain.JourneyRequest;
+import com.tramchester.domain.collections.ImmutableEnumSet;
 import com.tramchester.domain.dates.TramDate;
 import com.tramchester.domain.places.PostcodeLocation;
 import com.tramchester.domain.presentation.TransportStage;
 import com.tramchester.domain.reference.TransportMode;
+import com.tramchester.domain.time.TramDuration;
 import com.tramchester.domain.time.TramTime;
 import com.tramchester.graph.core.GraphDatabase;
 import com.tramchester.graph.core.MutableGraphTransaction;
+import com.tramchester.graph.search.LocationJourneyPlanner;
 import com.tramchester.integration.testSupport.bus.IntegrationBusTestConfig;
 import com.tramchester.repository.StationRepository;
-import com.tramchester.resources.LocationJourneyPlanner;
 import com.tramchester.testSupport.LocationJourneyPlannerTestFacade;
 import com.tramchester.testSupport.TestEnv;
 import com.tramchester.testSupport.reference.BusStations;
@@ -22,8 +24,6 @@ import com.tramchester.testSupport.reference.TestPostcodes;
 import com.tramchester.testSupport.testTags.PostcodeTest;
 import org.junit.jupiter.api.*;
 
-import java.time.Duration;
-import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
@@ -46,7 +46,7 @@ class PostcodeBusRouteCalculatorTest {
     private MutableGraphTransaction txn;
     private final TramTime time = TramTime.of(9,11);
     private LocationJourneyPlannerTestFacade planner;
-    private Duration maxJourneyDuration;
+    private TramDuration maxJourneyDuration;
 
     /// TODO In effect these are just location to location searchs, perhaps map postcode to locality???
 
@@ -69,7 +69,7 @@ class PostcodeBusRouteCalculatorTest {
         StationRepository stationRepository = componentContainer.get(StationRepository.class);
 
         planner = new LocationJourneyPlannerTestFacade(componentContainer.get(LocationJourneyPlanner.class), stationRepository, txn);
-        maxJourneyDuration = Duration.ofMinutes(testConfig.getMaxJourneyDuration());
+        maxJourneyDuration = TramDuration.ofMinutes(testConfig.getMaxJourneyDuration());
     }
 
     @AfterEach
@@ -85,7 +85,7 @@ class PostcodeBusRouteCalculatorTest {
         assertFalse(journeys.isEmpty(), "no journeys");
     }
 
-    private EnumSet<TransportMode> getRequestedModes() {
+    private ImmutableEnumSet<TransportMode> getRequestedModes() {
         return BusesOnly;
     }
 
@@ -211,7 +211,7 @@ class PostcodeBusRouteCalculatorTest {
     }
 
     private void assertWalkAtStart(Set<Journey> journeys) {
-        journeys.forEach(journey -> assertEquals(TransportMode.Walk, journey.getStages().get(0).getMode()));
+        journeys.forEach(journey -> assertEquals(TransportMode.Walk, journey.getStages().getFirst().getMode()));
     }
 
     private void checkNearby(PostcodeLocation start, BusStations end) {
@@ -225,7 +225,7 @@ class PostcodeBusRouteCalculatorTest {
         assertFalse(oneStage.isEmpty(), "no direct journey");
 
         oneStage.forEach(journey -> {
-            TransportStage<?,?> transportStage = journey.getStages().get(0);
+            TransportStage<?,?> transportStage = journey.getStages().getFirst();
             assertEquals(TransportMode.Walk, transportStage.getMode());
             assertEquals(start.getLatLong(), transportStage.getFirstStation().getLatLong());
             assertEquals(end.getId(), transportStage.getLastStation().getId());
@@ -241,7 +241,7 @@ class PostcodeBusRouteCalculatorTest {
         assertFalse(oneStage.isEmpty(), "Missing one stage journey, got " + journeys);
 
         oneStage.forEach(journey -> {
-            final TransportStage<?, ?> transportStage = journey.getStages().get(0);
+            final TransportStage<?, ?> transportStage = journey.getStages().getFirst();
             assertEquals(TransportMode.Walk, transportStage.getMode());
             assertEquals(start.getId(), transportStage.getFirstStation().getId());
         });
